--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!-- ***********navigations********* -->
    
-    <nav class="navbar navbar-expand-sm  navbar-light w3-light-gray">
+    <nav class="navbar navbar-expand-sm sticky-top navbar-light w3-light-gray">
         <div class="container-fluid">
           <a class="navbar-brand " href="#">Potato King</a>
           <button class="navbar-toggler collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
